[tool.poetry]
name = "pytigris"
version = "0.1.0"
description = "Python version of R Tigris package for easily accessing US Census Bureau shapefiles."
authors = ["ITDebicki <itdebicki@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "^0.12.1"
requests = "^2.28.1"
tqdm = "^4.64.1"
pandas = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-subtests = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
